# Mentori

./: .env  .env.example  .env.test  .gitignore  BRAINSTORM.md  CITATION.cff  CURRENT_PCEE_GRAPH.md  Dockerfile  Four_Tracks_Design.md  IDEA.md  LICENSE  LICENSE-CC-BY  PCEE_ARCHITECTURE.md  Pydantic_v1_to_v2_migration_effort.md  README.md  ROADMAP.md  UI_UX_style.md  agent_history.db  docker-compose.override.yml.example  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  random_data.csv  requirements.txt  simulation.html  simulation_escalation_path.html  simulation_option6.html  simulation_smooth_path.html  start_mentori.sh.example  tailwind.config.js  testo.txt
backend/: CURRENT_PCEE_GRAPH.md  Dockerfile  Dockerfile.tool_server  NEW_PCEE_GRAPH.md  __init__.py  agent.py  auth.py  board_of_experts_graph.py  callbacks.py  config.py  controller.py  database.py  db_utils.py  debug_chroma.py  evaluator.py  hitl_prototype.py  intent_classifier.py  langgraph_agent.py  llm_planners.py  llm_setup.py  logging_config.py  main.py  message_handlers.py  planner.py  prompts.py  server.py  test_concurrency.py  tool_config.json  tool_loader.py  tool_server.py  tools.py  visualize_graph.py
css/: style.css
data/: mentori.db
database/: agent_history.db
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
js/: script.js  state_manager.js  websocket_manager.js
scripts/: ingest_documents.py  inspect_registry.py  query_documents.py
src/: App.jsx  index.css  main.jsx
tests/: rag_ground_truth.json  test_async_jobs.py  (+24 more)
(+520 files in other folders)
